--- a/styles/style.css
+++ b/styles/style.css
@@ -1,47 +1,127 @@
 /* fonts */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
 
-/* common styles or utilities */
+/* common styles */
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
 }
 
+/* nav start  */
+nav {
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  line-height: 80px;
+}
+nav a {
+  font-size: 20px;
+  padding: 20px;
+  text-decoration: none;
+  font-weight: 800;
+}
+/* nav end  */
+
+/* header */
 header {
   background-color: #2d25a0;
+  height: 700px;
 }
-h1{
-    font-size: 64px;
-    color: #ffffff;
+h1 {
+  font-size: 64px;
+  color: #ffffff;
+}
+p {
+  font-size: 16px;
 }
 
-.container {
-    display: flex;
-  }
+.header {
+  display: flex;
+}
 
-.banner-img img{
-    width: 100%;
-  }
+.banner-img img {
+  width: 100%;
+}
 .title {
-    width: 50%;
-margin: 207px 102px 240px 156px;
+  width: 50%;
+  margin: auto;
 }
 
 .banner-img {
-    width: 50%;
-    margin: 153px 141px 86px 0;
+  width: 50%;
+  padding-left: 102px;
+  margin-top: 153px;
 }
 
-
 .watch-button {
-    text-decoration: none;
-    background: #E02C6D;
-    border-radius: 10px;
-    font-size: 30px;
-    color: #FFFFFF;
-    padding: 10px 24px;
-  }
+  text-decoration: none;
+  background: #e02c6d;
+  border-radius: 10px;
+  font-size: 30px;
+  color: #ffffff;
+  padding: 10px 24px;
+}
+/* header end  */
 
-  .players{
-      
+/* main  */
+main {
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+}
+
+.players {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+.player img {
+  width: 100%;
+}
+.player {
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+}
+.container {
+  width: 80%;
+  margin: auto;
+}
+/* main end */
+
+/* section start */
+.copa-img img {
+  width: 60%;
+}
+.title-copa {
+  padding-left: 200px;
+}
+.match {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10%;
+  margin-top: 100px;
+}
+/* section end  */
+
+/* footer */
+.logo {
+  width: 30%;
+  text-align: center;
+}
+.foot {
+  text-align: center;
+  margin-top: 30px;
+}
+/* footer end  */
+
+/* Media Queries */
+@media only screen and (max-width: 688px) {
+  .container {
+    width: 100px;
   }
+  .player .players {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .player {
+    flex-direction: column;
+  }
+}
